# test-near-plugins

./: .gitignore  Cargo.toml  README.md  build.sh
src/: lib.rs
