[package]
name = "test-near-plugins"
version = "0.1.0"
authors = ["Marcelo Fornet marcelo@aurora.dev"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = false

[dependencies]
near-sdk = "4.0.0-pre.5"
near-plugins = { path = "/Users/marcelo/Documents/near/near-plugins/near-plugins"}
